# wows-toolkit

./: .gitattributes  .gitignore  .rustfmt.toml  .scratch-net.diff  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPING.md  LICENSE  Lancer WoWs Toolkit (team).bat  README.md  RELEASE_NOTES.md  build.rs  cliff-release.toml  cliff.toml  flake.nix  game_versions.toml  game_versions_discovered.toml  lancer-toolkit.ps1  mise.toml  prebuild.sh  rust-toolchain.toml  rust-toolchian
_INSTALLEUR-TEAM/installer-src/: Cargo.toml
_INSTALLEUR-TEAM/installer-src/src/: main.rs
crates/minimap-renderer/: Cargo.toml  README.md  build.rs
crates/minimap-renderer/src/: advantage.rs  assets.rs  codec.rs  config.rs  draw_command.rs  drawing.rs  error.rs  lib.rs  main.rs  map_data.rs  panel_math.rs  renderer.rs  video.rs
crates/minimap-renderer/src/encoder/: cpu.rs  cpu_av1.rs  gpu.rs  mod.rs  videotoolbox.rs  vulkan.rs  worker.rs
crates/minimap-renderer/tests/: drawcommand_parity.rs
crates/minimap-renderer/tests/snapshots/: drawcommand_parity__drawcommand_parity_cossack_armsrace.snap  drawcommand_parity__drawcommand_parity_v170_pvp.snap  drawcommand_parity__drawcommand_parity_vermont_pvp.snap
crates/replayshark/: Cargo.toml
crates/replayshark/src/: main.rs
crates/wgcheck/: Cargo.toml
crates/wgcheck/src/: lib.rs  main.rs
crates/wows-battle-world/: Cargo.toml  build.rs
crates/wows-battle-world/src/: components.rs  ids.rs  lib.rs  merged.rs  read.rs  report.rs  resources.rs  scan.rs  units.rs  view.rs  world.rs
crates/wows-battle-world/src/ingest/: aviation.rs  chat.rs  combat.rs  consumables.rs  entities.rs  match_state.rs  mod.rs  positions.rs  projectiles.rs  secondaries.rs  vehicles.rs  zones.rs
crates/wows-battle-world/tests/: corpus_golden.rs  differential.rs  ingest_smoke.rs  merged.rs  parity_aviation.rs  parity_combat.rs  parity_consumables.rs  parity_corpus.rs  parity_match_state.rs  parity_players_chat.rs  parity_positions.rs  parity_projectiles.rs  parity_read_api.rs  parity_report.rs  parity_vehicles.rs  parity_zones.rs  position_timeline.rs  scan_facts.rs
crates/wows-battle-world/tests/snapshots/: corpus_golden__run_golden@v0_10_0_jean_bart_pvp_digest.snap  corpus_golden__run_golden@v0_10_0_jean_bart_pvp_report.snap  corpus_golden__run_golden@v0_10_5_shimakaze_clan_digest.snap  corpus_golden__run_golden@v0_10_5_shimakaze_clan_report.snap  corpus_golden__run_golden@v0_11_0_conte_di_cavour_brawl_digest.snap  corpus_golden__run_golden@v0_11_0_conte_di_cavour_brawl_report.snap  corpus_golden__run_golden@v0_11_0_grossdeutschland_ranked_digest.snap  corpus_golden__run_golden@v0_11_0_grossdeutschland_ranked_report.snap  corpus_golden__run_golden@v0_11_9_cossack_armsrace_pvp_digest.snap  corpus_golden__run_golden@v0_11_9_cossack_armsrace_pvp_report.snap  corpus_golden__run_golden@v0_8_2_montana_pvp_digest.snap  corpus_golden__run_golden@v0_8_5_bayern_pve_operation_digest.snap  corpus_golden__run_golden@v0_8_5_bayern_pve_operation_report.snap  corpus_golden__run_golden@v0_8_5_new_orleans_ranked_digest.snap  corpus_golden__run_golden@v0_9_0_atlanta_pve_advance_digest.snap  corpus_golden__run_golden@v0_9_0_shimakaze_pvp_digest.snap  corpus_golden__run_golden@v12_3_s189_submarine_pvp_digest.snap  corpus_golden__run_golden@v12_3_s189_submarine_pvp_report.snap  corpus_golden__run_golden@v12_6_yellow_dragon_pve_operation_digest.snap  corpus_golden__run_golden@v12_6_yellow_dragon_pve_operation_report.snap  corpus_golden__run_golden@v13_10_colbert_pvp_digest.snap  corpus_golden__run_golden@v13_10_colbert_pvp_report.snap  corpus_golden__run_golden@v13_2_annapolis_pvp_digest.snap  corpus_golden__run_golden@v13_2_annapolis_pvp_report.snap  corpus_golden__run_golden@v13_3_v170_pvp_digest.snap  (+16 more)
crates/wows-core/: Cargo.toml
crates/wows-core/src/: game_constants.rs  game_types.rs  lib.rs  units.rs  version.rs
crates/wows-data-mgr/: Cargo.toml
crates/wows-data-mgr/src/: builds.rs  cas.rs  cas_vfs.rs  constants.rs  detect.rs  download_repo.rs  dump.rs  lib.rs  main.rs  registry.rs
crates/wows-data-mgr/tests/: game_data.rs
crates/wows-game-data-dl/: Cargo.toml
crates/wows-game-data-dl/src/: detect.rs  download.rs  lib.rs  main.rs  manifest.rs  registry.rs
crates/wows-replay-insights/: Cargo.toml
crates/wows-replay-insights/src/: lib.rs
crates/wows-replay-insights/tests/: inventory_seeding.rs
crates/wows-replays/: Cargo.toml  build.rs
crates/wows-replays/src/: error.rs  game_constants.rs  lib.rs  nested_property_path.rs  packet2.rs  types.rs  wowsreplay.rs
crates/wows-replays/tests/: battle_controller.rs  packet_snapshots.rs  replay_parsing.rs
crates/wows-toolkit/: Cargo.toml  build.rs
crates/wows-toolkit/src/: app.rs  cap_layout.rs  controls.rs  discord.rs  game_params.rs  lib.rs  main.rs  mod_manager.rs  personal_rating.rs  realtime_armor_viewer.rs  replay_export.rs  replay_renderer.rs  session_stats.rs  settings.rs  tab_state.rs  twitch.rs  wows_data.rs
crates/wowsunpack/: Cargo.toml  build.rs  consumable_layouts.toml
crates/wowsunpack/src/: battle_results.rs  consumable_versions.rs  error.rs  game_assets.rs  game_constants.rs  game_data.rs  game_types.rs  lib.rs  main.rs  recognized.rs  variant_accessors.rs
crates/wowsunpack/tests/: game_data.rs  old_build_parse.rs  parser_snapshots.rs  ttx_real_provider.rs
crates/wt-collab-egui/: Cargo.toml
crates/wt-collab-egui/src/: draw_commands.rs  interaction.rs  lib.rs  rendering.rs  toolbar.rs  transforms.rs  types.rs
crates/wt-collab-protocol/: Cargo.toml
crates/wt-collab-protocol/src/: lib.rs  protocol.rs  types.rs  validation.rs
crates/wt-translations/: Cargo.toml
crates/wt-translations/src/: keys.rs  lib.rs  text_resolver.rs
crates/wt-translations/translations/: cs.toml  de.toml  en.toml  es.toml  es_mx.toml  fr.toml  it.toml  ja.toml  ko.toml  nl.toml  pl.toml  pt.toml  pt_br.toml  ru.toml  th.toml  tr.toml  uk.toml  zh.toml  zh_sg.toml  zh_tw.toml
crates/wt-web/: Cargo.toml  Trunk.toml  index.html
crates/wt-web/src/: app.rs  assets.rs  connection.rs  lib.rs  state.rs  types.rs
(+449 files in other folders)
