[workspace]
resolver = "3"
members = [
    "crates/wows-toolkit",
    "crates/wowsunpack",
    "crates/wows-replays",
    "crates/minimap-renderer",
    "crates/replayshark",
]

[workspace.package]
edition = "2024"
rust-version = "1.92"
license = "MIT"

[workspace.dependencies]
# Internal crates (version + path for publishable crates)
wowsunpack = { version = "0.23.0", path = "crates/wowsunpack", default-features = false }
wows_replays = { version = "0.24.0", path = "crates/wows-replays" }
wows_minimap_renderer = { version = "0.16.0", path = "crates/minimap-renderer", default-features = false }
# Shared external dependencies
bon = "3.9.0"
bytemuck = { version = "1", features = ["derive"] }
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
gettext = "0.4"
image = { version = "0.25", default-features = false }
image_dds = { version = "0.7", default-features = false }
itertools = "0.14"
pickled = { version = "2.0.0-alpha3" }
rkyv = "0.8.15"
rootcause = "0.12"
roxmltree = "0.21"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
winnow = "0.7"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 2

[profile.profiling]
inherits = "release"
debug = true
