[package]
name = "wows_minimap_renderer"
version = "0.17.0"
publish = true
description = """
Library/CLI application for rendering World of Warships replay files as a minimap render
""""
repository = "https://github.com/landaire/wows-toolkit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "wows_minimap_renderer"

[[bin]]
name = "minimap_renderer"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "vulkan", "videotoolbox", "arc"]
bin = ["dep:clap", "dep:gettext", "dep:toml", "dep:indicatif"]
# Vulkan Video encoder (Linux/Windows) - automatically disabled on macOS
vulkan = ["dep:vk-video", "dep:wgpu", "dep:yuvutils-rs"]
# VideoToolbox encoder (macOS only)
videotoolbox = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-core-foundation", "dep:objc2-core-media", "dep:objc2-core-video", "dep:objc2-video-toolbox", "dep:yuvutils-rs"]
# CPU encoder (fallback, all platforms)
cpu = ["dep:openh264"]
arc = ["wows_replays/arc"]

[dependencies]
wows_replays = { workspace = true }
wowsunpack = { workspace = true, features = ["json", "vfs"] }
image = { workspace = true, features = ["png", "jpeg"] }
ab_glyph = "0.2"
mp4 = "0.14"
bytes = "1"
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
serde = { workspace = true }
convert_case = { workspace = true }
gettext = { workspace = true, optional = true }
roxmltree = { workspace = true }
resvg = "0.47"
tiny-skia = "0.12"
indicatif = { workspace = true, optional = true }
rootcause = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# YUV conversion (shared by vulkan and videotoolbox backends)
yuvutils-rs = { version = "0.8", optional = true }

# CPU encoder (fallback)
openh264 = { version = "0.9", features = ["source"], optional = true }

# Vulkan Video encoder (Linux/Windows only)
[target.'cfg(not(target_os = "macos"))'.dependencies]
vk-video = { version = "0.2", optional = true }
wgpu = { version = "28", optional = true }

# VideoToolbox encoder (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-core-foundation = { version = "0.3", optional = true }
objc2-core-media = { version = "0.3", optional = true }
objc2-core-video = { version = "0.3", optional = true }
objc2-video-toolbox = { version = "0.3", optional = true }
