[package]
name = "wows_minimap_renderer"
version = "0.18.0"
publish = true
description = """
Library/CLI application for rendering World of Warships replay files as a minimap render
""""
repository = "https://github.com/landaire/wows-toolkit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "wows_minimap_renderer"

[[bin]]
name = "minimap_renderer"
path = "src/main.rs"
required-features = ["bin"]

[features]
default = ["bin", "vulkan", "videotoolbox", "arc"]
# Core rendering: gates heavy deps (image, ab_glyph, tiny-skia, resvg, etc.) and
# modules that use them (renderer, drawing, video, encoder, assets).
# Without this feature, only lightweight type modules are available (draw_command, map_data,
# config, advantage, error).
rendering = [
    "dep:image",
    "dep:ab_glyph",
    "dep:mp4",
    "dep:bytes",
    "dep:convert_case",
    "dep:roxmltree",
    "dep:resvg",
    "dep:tiny-skia",
    "dep:rootcause",
    "wows_replays/parsing",
    "wowsunpack/json",
    "wowsunpack/vfs",
    "wowsunpack/parsing",
]
bin = ["dep:clap", "dep:gettext", "dep:toml", "dep:indicatif", "dep:tracing-subscriber", "rendering", "rkyv"]
rkyv = ["dep:rkyv", "wowsunpack/rkyv"]
# Vulkan Video encoder (Linux/Windows) - automatically disabled on macOS
vulkan = ["dep:vk-video", "dep:wgpu", "dep:yuvutils-rs", "rendering"]
# VideoToolbox encoder (macOS only)
videotoolbox = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-core-foundation", "dep:objc2-core-media", "dep:objc2-core-video", "dep:objc2-video-toolbox", "dep:yuvutils-rs", "rendering"]
# CPU encoder (fallback, all platforms)
cpu = ["dep:openh264", "rendering"]
arc = ["wows_replays/arc"]

[dependencies]
wows_replays = { workspace = true, default-features = false }
wowsunpack = { workspace = true, default-features = false }
image = { workspace = true, features = ["png", "jpeg"], optional = true }
ab_glyph = { version = "0.2", optional = true }
mp4 = { version = "0.14", optional = true }
bytes = { version = "1", optional = true }
clap = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
serde = { workspace = true }
convert_case = { workspace = true, optional = true }
gettext = { workspace = true, optional = true }
roxmltree = { workspace = true, optional = true }
resvg = { version = "0.47", optional = true }
tiny-skia = { version = "0.12", optional = true }
indicatif = { workspace = true, optional = true }
rootcause = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
rkyv = { workspace = true, optional = true }

# YUV conversion (shared by vulkan and videotoolbox backends)
yuvutils-rs = { version = "0.8", optional = true }

# CPU encoder (fallback)
openh264 = { version = "0.9", features = ["source"], optional = true }

# Vulkan Video encoder (Linux/Windows only)
[target.'cfg(not(target_os = "macos"))'.dependencies]
vk-video = { version = "0.2", optional = true }
wgpu = { version = "28", optional = true }

# VideoToolbox encoder (macOS only)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2-core-foundation = { version = "0.3", optional = true }
objc2-core-media = { version = "0.3", optional = true }
objc2-core-video = { version = "0.3", optional = true }
objc2-video-toolbox = { version = "0.3", optional = true }
