[package]
name = "replayshark"
version = "0.1.0"
authors = ["Lane Kolbly <lane@rscheme.org>", "Lander Brandt <landaire>"]
publish = false
edition.workspace = true
rust-version.workspace = true

[dependencies]
wows_replays = { workspace = true }
rootcause = { workspace = true }
clap = { workspace = true }
walkdir = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
parse_int = "0.9.0"
wowsunpack = { workspace = true, features = ["json", "vfs"] }
anyhow = { workspace = true }
