[package]
name = "wows-data-mgr"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
wowsunpack = { workspace = true, features = ["vfs", "rkyv"] }
clap = { workspace = true }
rootcause = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
jiff = { workspace = true }
rkyv = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
