[package]
name = "wows-data-mgr"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/landaire/wows-toolkit"
description = "Download and manage World of Warships game data for offline replay analysis"

[dependencies]
wowsunpack = { workspace = true, features = ["vfs", "rkyv"] }
clap = { workspace = true }
rootcause = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
jiff = { workspace = true }
rkyv = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
