[package]
name = "wows-data-mgr"
version = "0.10.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/landaire/wows-toolkit"
description = "Download and manage World of Warships game data for offline replay analysis"

[dependencies]
wowsunpack = { workspace = true, features = ["vfs-mmap", "rkyv"] }
clap = { workspace = true }
rootcause = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
jiff = { workspace = true }
ruzstd = "0.8"
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sha2 = { workspace = true }
serde_json = { workspace = true }
octocrab = { version = "0.49", optional = true }
tokio = { version = "1", features = ["rt", "sync"], optional = true }
http-body-util = { version = "0.1", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"], optional = true }

[features]
default = ["constants"]
constants = ["dep:octocrab", "dep:tokio", "dep:http-body-util"]
download = ["dep:tokio", "dep:reqwest"]

[dev-dependencies]
tempfile = "3"
