[package]
name = "wows_replays"
version = "0.31.0"
authors = ["landaire"]
description = "A parser for World of Warships replay files"
repository = "https://github.com/landaire/wows-toolkit"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
winnow = { workspace = true, optional = true }
flate2 = { workspace = true }
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
rust-crypto = { version = "0.2.36", optional = true }
roxmltree = { workspace = true, optional = true }
pickled = { workspace = true, optional = true }
kinded = "0.5"
tracing = { workspace = true }
wowsunpack = { workspace = true, default-features = false }
bon = { workspace = true, optional = true }
rootcause = { workspace = true, optional = true }
modular-bitfield = { version = "0.13", optional = true }

[build-dependencies]
serde = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
sha2 = { workspace = true }
wows-data-mgr = { workspace = true }

[features]
default = ["arc", "parsing"]
parsing = [
    "dep:winnow",
    "dep:rust-crypto",
    "dep:pickled",
    "dep:modular-bitfield",
    "dep:bon",
    "dep:roxmltree",
    "dep:serde_json",
    "dep:rootcause",
    "wowsunpack/json",
    "wowsunpack/vfs",
    "wowsunpack/parsing",
]
arc = ["wowsunpack/arc"]
