[package]
name = "wows_toolkit"
version.workspace = true
authors = ["Lander Brandt <landaire>"]
publish = false
edition.workspace = true
rust-version.workspace = true
default-run = "wows_toolkit"

[package.metadata.winresource]

[dependencies]
# All of these need to be bumped with egui releases
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    # "glow",
    "wgpu",
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
egui_extras = { version = "0.33.3", features = ["syntect", "image", "svg"] }
egui_dock = "0.18.0"
egui-phosphor = "0.11"
egui_table = "0.7.0"
egui_commonmark = "0.22"
egui_ltreeview = { version = "0.6.1", features = ["persistence"] }
egui_plot = "0.34.1"
egui_taffy = "0.10.0"
egui-notify = "0.21.0"
# Pin to match eframe's wgpu version so backend features unify correctly
# This dependency with `default-features = true` is also needed to ensure
# that targets are properly initialized.
wgpu = { version = "27", default-features = true }

tracing = { workspace = true }
wows_replays = { workspace = true, features = ["arc"] }
serde = { workspace = true }
wowsunpack = { workspace = true, features = [
    "arc",
    "cbor",
    "json",
    "models",
    "rkyv",
    "vfs",
] }
bytemuck = { workspace = true }
wows_minimap_renderer = { workspace = true, features = ["vulkan", "videotoolbox", "cpu", "arc"] }
rfd = "0.17"
humansize = "2.1.3"
thiserror = { workspace = true }
glob = { workspace = true }
itertools = { workspace = true }
gettext = { workspace = true }
language-tags = "0.3"
pickled = { workspace = true, features = ["variantly"] }
flate2 = { workspace = true }
thousands = "0.2.0"
notify = "8.2.0"
serde_json = { workspace = true, features = ["preserve_order"] }
data-encoding = "2.10.0"
image = { workspace = true, features = ["jpeg", "png"] }
image_dds = { workspace = true, features = ["ddsfile", "image"] }
octocrab = "0.49"
semver = "1.0"
tokio = { version = "1.49", features = ["rt", "rt-multi-thread", "macros"] }
zip = { version = "8.1.0", default-features = false, features = ["deflate"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_cbor = { workspace = true }
parking_lot = { version = "0.12.5", features = ["serde"] }
twitch_api = { version = "0.7.2", features = [
    "helix",
    "client",
    "reqwest",
] }
levenshtein = "1.0.5"
escaper = "0.1.1"
http-body = "1.0.1"
http-body-util = "0.1.3"
toml = { workspace = true, optional = true }
tar = { version = "0.4.44", optional = true }
scopeguard = { version = "1.2.0", optional = true }
csv = "1.4.0"
jiff = { workspace = true, features = ["serde"] }
rootcause = { workspace = true }
arboard = "3.6.1"
rkyv = { workspace = true }
const_format = "0.2.35"
tempfile = "3.26.0"
unidecode = "0.3.0"
roxmltree = { workspace = true }
nalgebra = "0.34.1"
regex = "1.12"

[build-dependencies]
winresource = "0.1.30"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { workspace = true, features = [
    "local-time",
    "time",
    "env-filter",
], optional = true }

[features]
default = ["logging"]
shipbuilds_debugging = []
mod_manager = ["dep:toml", "dep:tar", "dep:scopeguard"]
logging = ["dep:tracing-subscriber", "dep:tracing-appender"]
panic_handler = []
